--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="/hacker.js"></script>
-    <title>Try and Hack Me Again</title>
+    <link rel="icon" href="https://icons8.com/icon/18353/turbocharger">
+    <title>Dynamic Racing</title>
 </head>
 <body>
    <h1>Got you now! I'll be monitoring you and whoever you are working with. :)</h1>
